# taxonomy-editor

./: .env  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  crowdin.yml  docker-compose.yml  package-lock.json  package.json  taxonomy-editor.code-workspace
.github/: CODEOWNERS  DEPENDABOT_GROUPS.md  dependabot-groups.md  dependabot.yml  labeler.yml
.github/workflows/: auto-assign-pr.yml  codeql.yml  container-build.yml  container-deploy.yml  github-projects-for-openfoodfacts-design.yml  github-projects.yml  label.yml  lint-code-command.yml  lint-commands.yml  pull_request.yml  release-please.yml  semantic-pr.yml
backend/: Dockerfile  Makefile  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg
backend/editor/: api.py  dependencies.py  entries.py  exceptions.py  github_functions.py  graph_db.py  models.py  normalizer.py  scheduler.py  settings.py  test_api.py  utils.py
backend/editor/controllers/: node_controller.py  project_controller.py  search_controller.py
backend/editor/controllers/utils/: result_utils.py
backend/editor/models/: node_models.py  project_models.py  search_models.py
backend/editor/models/base_models/: __init__.py
backend/editor/models/types/: datetime.py
backend/openapi/: generate_openapi_spec.py  openapi.json
backend/sample/: dump.py  dumped-test-taxonomy.json  load.py  schema.json  test-neo4j.json  test.json  test.txt
backend/tests/: conftest.py  test_api.py  test_export.py  test_utils.py  tets.py  utils.py
backend/tests/data/: test.txt
backend/tests/expected_results/: test_delete_node_and_export.diff  test_delete_project.json  test_upload_taxonomy.json  test_upload_taxonomy.json2  tmp.json
conf/: nginx.conf
doc/assets/: taxonomy_editor_overview.excalidraw
doc/explanations/: docker-compose-setup.md
doc/how-to-guides/: develop-with-neo4j.md  docker-compose-setup.md
doc/introduction/: setup-dev.md
doc/references/: taxonomy-parser.md
docker/: dev.yml  prod.yml
openfoodfacts_taxonomy_parser/parser/: exception.py  parser.py
openfoodfacts_taxonomy_parser/tests/unit/: test_parser_unit.py
parser/: Makefile  Parser.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
parser/Parser/: Parser.py  test.txt  test_Parser.py
parser/openfoodfacts_taxonomy_parser/: exception.py  normalizer.py  parser.py  patcher.py  requirements.txt  unparser.py  utils.py
parser/openfoodfacts_taxonomy_parser/parser/: __init__.py  logger.py  parser.py  taxonomy_parser.py
parser/parser/: taxonomy_parser.py  test_taxonomy_parser.py
parser/tests/: conftest.py  requirements-test.txt
parser/tests/data/: test.txt  test_broken_taxonomy.txt  test_comment_below_parent.txt  test_external1.txt  test_external2.txt  test_property_confused_lang.txt
parser/tests/integration/: test_parse_unparse_integration.py  test_parser_integration.py
parser/tests/unit/: test_parser_unit.py  test_unparser_unit.py
taxonomy-editor-frontend/: .eslintrc.json  .prettierignore  Dockerfile  README.md  craco.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
taxonomy-editor-frontend/.husky/: pre-commit  pre-push
taxonomy-editor-frontend/public/: index.html  manifest.json
taxonomy-editor-frontend/src/: App.js  App.tsx  constants.js  constants.ts  index.tsx  utils.ts  vite-env.d.ts
taxonomy-editor-frontend/src/backend-types/: types.ts
taxonomy-editor-frontend/src/client/: index.ts
taxonomy-editor-frontend/src/client/core/: CancelablePromise.ts  OpenAPI.ts  request.ts
taxonomy-editor-frontend/src/client/models/: AncestorFilterSearchTerm.ts  ChildFilterSearchTerm.ts  DescendantFilterSearchTerm.ts  (+13 more)
taxonomy-editor-frontend/src/components/: Alerts.tsx  CreateNodeDialogContent.tsx  CustomAlert.tsx  EntryNodesTableBody.tsx  FetchRelations.jsx  LanguageSelectionDialog.jsx  Loader.tsx  NodesTableBody.tsx  ResponsiveAppBar.jsx  ResponsiveAppBar.tsx  UseContext.tsx  WarningParsingErrors.tsx  interConvertNames.jsx  useFetch.jsx  useFetch.ts
taxonomy-editor-frontend/src/pages/: PageNotFound.tsx  RootLayout.tsx
(+81 files in other folders)
