[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
line-length = 100
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
data_file = ".cov/.coverage"
source = ["editor", "openfoodfacts_taxonomy_parser"]

[tool.coverage.xml]
output = ".cov/coverage.xml"

[tool.isort] # From https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "openfoodfacts-taxonomy-editor"
version = "0.1.0"
description = ""
authors = ["Open Food Facts Team"]
license = "GNU Affero General Public License v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.104.1" }
githubkit = { version = "^0.11.0a4", allow-prereleases = true }
uvicorn = { extras = ["standard"], version = "^0.23.2" }
neo4j = "^5.14.0"
openfoodfacts_taxonomy_parser = { path = "../parser", develop = true }
python-multipart = "^0.0.22"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
httpx = "^0.25.1"
anyio = "^3.7.1"
