[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
line-length = 100
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
data_file = ".cov/.coverage"
source = ["openfoodfacts_taxonomy_parser"]

[tool.coverage.xml]
output = ".cov/coverage.xml"

[tool.isort] # From https://black.readthedocs.io/en/stable/compatible_configs.html#isort
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "openfoodfacts-taxonomy-parser"
version = "0.1.0"
description = "Taxonomy Parser written in Python for Open Food Facts"
authors = ["Pierre Slamich <pierre@openfoodfacts.org>"]
license = "GNU Affero General Public License v3"
homepage = "https://world.openfoodfacts.org"
packages = [{ include = "openfoodfacts_taxonomy_parser" }]

[tool.poetry.dependencies]
iso-639 = "^0.4.5"
python = "^3.11"
unidecode = "^1.3.7"
neo4j = "^5.14.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"
isort = "^5.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
